--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "node": ">=0.10.0"
   },
   "scripts": {
-    "test": "karma start test/karma.conf.js"
+    "test": "karma start test/karma.conf.js",
+    "postinstall": "bower install"
   },
   "dependencies": {
     "express": "^4.15.2",
