--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "autoprefixer-core": "^5.2.1",
     "grunt": "^0.4.5",
     "grunt-angular-templates": "^0.5.7",
+    "grunt-build-control": "^0.7.1",
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-compass": "^1.0.0",
@@ -42,7 +43,6 @@
     "test": "karma start test/karma.conf.js"
   },
   "dependencies": {
-    "express": "^4.15.2",
-    "gzippo": "^0.2.0"
+    "express": "^4.15.2"
   }
 }
