--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "node": ">=0.10.0"
   },
   "scripts": {
+    "postinstall": "./node_modules/bower/bin/bower install",
     "test": "karma start test/karma.conf.js"
   },
   "dependencies": {
